--- a/gut-parasite-test-main.html
+++ b/gut-parasite-test-main.html
@@ -573,6 +573,10 @@
                 height: auto; /* Maintain aspect ratio */
             }
 
+            .kit-desc {
+                font-size: 1.1rem;
+            }
+
         }
 
         /* XS to MD screens (up to 991.98px) */
