--- a/gut-parasite-test-main.html
+++ b/gut-parasite-test-main.html
@@ -887,7 +887,7 @@
         </div>
     </div>
     
-    <div class="container mt-3">
+    <div class="container mt-3 mt-lg-0">
         <!-- Content for Medium and Larger Screens -->
         <div class="d-none d-md-block col-lg-6 col-11 mx-auto kit-desc">
             <p>
@@ -908,14 +908,14 @@
     </div>
 
 
-    <div class="container mt-3 mt-lg-5 d-flex flex-column justify-content-center">
+    <div class="container mt-3 mt-lg-4 d-flex flex-column justify-content-center">
         <div class="row">
             <div class="col-11 col-lg text-center">
                 <h2 class="category-header">How can the Precise Parasite Home Test Kit™ find 25 to 28 more parasites?</h2>
             </div>
         </div>
     
-        <div class="row mt-2 mt-lg-4">
+        <div class="row mt-2 mt-lg-3">
             <div class="col-11 col-lg-6 mx-auto">
                 <p class="kit-desc">The answer comes down to 1 man - world renowned Parasitologist Dr. Omar M. Amin. He created the most accurate parasite laboratory known to man. And Dr. Amin's lab is where parasites from the Precise Parasite Home Test Kit™ are diagnosed. The stool test Dr. Amin created is unique in 3 ways:</p>
             </div>
@@ -935,11 +935,11 @@
                             <p class="list-css-desc">The laboratory's team of PhD-level parasite researchers possesses extensive experience in conducting parasite research worldwide, with an average tenure of over 15 years as parasitologists. Their profound expertise ensures the detection of even the rarest parasite infections.</p>
                         </li>
                         <li>
-                            <h3 class="list-css mt-3 mb-1">Parasite eggs 100x smaller than a human hair are visible with high contrast dyes</h3>
+                            <h3 class="list-css mt-4 mb-1">Parasite eggs 100x smaller than a human hair are visible with high contrast dyes</h3>
                             <p class="list-css-desc">Parasites aren't always present in the stool sample. Sometimes, just their eggs are there. Using high contrast dyes, Dr. Amin's lab can find parasite eggs other labs will miss.</p>
                         </li>
                         <li>
-                            <h3 class="list-css mt-3 mb-1">No signs of parasites are destroyed with carefully selected preservation fluids</h3>
+                            <h3 class="list-css mt-4 mb-1">No signs of parasites are destroyed with carefully selected preservation fluids</h3>
                             <p class="list-css-desc">When you take a stool sample, it should be preserved so that it kills the parasites. But, some cheap preservation fluids also destroy signs of the parasite infection. Dr. Amin's preservation formula makes sure all signs of parasite infection are perfectly preserved.</p>
                         </li>
                     </ol>
