fix spacing, font styling, and colors

--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
         }
 
         .list-css {
-            color: #3f92d1;
-            font-family: 'Montserrat', sans-serif;
+            color: #409fe3;
+            font-family: 'Lora', serif;
             font-size: 1.2rem;
             font-style: normal;
             font-weight: 600;
@@ -433,6 +433,7 @@
                 font-size: 1.1rem; /* Smaller font size for custom lead */
             }
             .description {
+                text-align: justify;
                 font-size: 1.05rem; /* Smaller font size for description */
             }
             .custom-text-style {
@@ -704,14 +705,14 @@
                     <span class="shipping-info">free shipping both ways</span>
                 </div>
                 
-                <div class="button-container d-flex justify-content-center">
+                <div class="button-container d-flex justify-content-center pb-2 pb-lg-0">
                     <a href="https://www.parasites.org/checkout/gut-parasite-test" class="btn btn-primary custom-buy-button">Order Test Kit</a>
                 </div>            
             </div>
         </div>
     </div>
 
-    <div class="contact-info mt-4 mt-lg-5 d-flex flex-column justify-content-center">
+    <div class="contact-info mt-5 mt-lg-5 d-flex flex-column justify-content-center">
         <div class="questions-text mb-2">Questions?</div>
         <div class="contact-text">
             Call or text us at <a href="tel:+13036999474">(303)-699-9474</a>
