Fixed mobile styling

--- a/gut-parasite-test-problem1.html
+++ b/gut-parasite-test-problem1.html
@@ -45,7 +45,7 @@
     </nav>
     
 
-    <div class="container mt-0 mt-lg-2 product-info header-bg">
+    <div class="container mt-0 mt-lg-2 product-info">
         <div class="row">
             <!-- Image Column for Desktop View -->
 
@@ -63,16 +63,16 @@
             
             <!-- Content Column for Mobile and Desktop -->
             <div class="col-lg-6">
-                <h1 class="mb-4 mb-lg-4 mt-4 mt-lg-0 h1css title-text">Home Stool Test Tells You If You Have Parasites</h1>
+                <h1 class="mb-2 mb-lg-4 h1css">Home Stool Test Tells You If You Have Parasites</h1>
                 <div class="row">
                     <div class="col">
                         <!-- Image for Mobile View -->
-                        <div class="mt-4 d-lg-none mb-5 d-flex justify-content-center inner-product-image">
+                        <div class="mt-4 d-lg-none mb-4 d-flex justify-content-center inner-product-image">
                             <img src="parasiteKit.png" alt="Product Image" class="img-fluid">
                         </div>
                         <h2 class="custom-lead mb-2">At Home Gut Parasites Test</h2> <!-- This remains unlinked -->
                         <a href="#reviews"> <!-- This wraps only the stars and review count -->
-                            <div class="stars-and-reviews mb-2 d-flex align-items-center">
+                            <div class="stars-and-reviews mb-4 d-flex align-items-center">
                                 <div>
                                     <img src="star.svg" alt="Star 1" class="star"><img src="star.svg" alt="Star 2" class="star"><img src="star.svg" alt="Star 3" class="star"><img src="star.svg" alt="Star 4" class="star"><img src="star.svg" alt="Star 5" class="star">
                                 </div>
