--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <!-- <div class="mt-3 mb-5 d-lg-none" style="height: 5px; background-color: #0094FF; width: 100%;"></div> -->
+    <div class="mt-3 mb-5 d-lg-none" style="height: 5px; background-color: #0094FF; width: 100%;"></div>
 
     <div class="contact-info mt-5 mt-lg-5 d-none d-lg-flex flex-column justify-content-center">
         <div class="questions-text mb-2">Questions?</div>
