Fix spacing of bullets and paragraphs; Added 5 new customer reviews

--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col text-center">
-                <p class="questions-css">Questions? Call or text 
+                <p>
+                    <span class="questions-css">Questions? Call or text </span>
                     <a href="tel:+13036999474">(303)-699-9474</a>
                 </p>
             </div>
@@ -398,7 +399,8 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col text-center">
-                <p class="questions-css">Questions? Call or text 
+                <p>
+                    <span class="questions-css">Questions? Call or text </span>
                     <a href="tel:+13036999474">(303)-699-9474</a>
                 </p>
             </div>
@@ -1114,7 +1116,8 @@
         <div class="container mt-2 mt-lg-5">
             <div class="row">
                 <div class="col text-center">
-                    <p class="questions-css">Questions? Call or text 
+                    <p>
+                        <span class="questions-css">Questions? Call or text </span>
                         <a href="tel:+13036999474">(303)-699-9474</a>
                     </p>
                 </div>
