Remove list css padding

--- a/index.html
+++ b/index.html
@@ -361,7 +361,6 @@
         </div>
 
         <!-- Section for Mobile Screens -->
-        <div class="container">
         <div class="d-block d-md-none">
             <ol class="list-css">
                 <li>
@@ -454,7 +453,7 @@
     </div>
 
     <div class="container mt-3" id="reviews">
-        <div class="row justify-content-between">
+        <div>
         <!-- Reviews -->
         <div id="customer_reviews" class="row justify-content-between"></div>
         <script type="module">
